# PointCloudCounterfactual

./: .gitignore  .pre-commit-config.yaml  README.md  create_variation.py  create_w_autoencoder_variation.py  diffusion_reconstruct.py  evaluate_counterfactuals.py  evaluate_reconstruction_flow.py  explore_dataset.py  generate.py  generate_counterfactual_flow.py  generate_counterfactuals.py  generate_flow_reconstruction_steps.py  generate_random_flow.py  generate_random_samples.py  generate_random_samples_diffusion.py  generate_random_vae.py  generate_reconstruction_flow.py  generate_reconstruction_vae.py  mypy.ini  plot_optimization_decoder.py  plot_optimization_w_decoder.py  pyproject.toml  readme.md  requirements.txt  ruff.toml  run.sh  train_autoencoder.py  train_classifier.py  train_diffusion.py  train_flow.py  train_w_autoencoder.py  tune_autoencoder.py  tune_flow.py  tune_w_autoencoder.py  verify_final_structure.py  visualize_counterfactuals.py  visualize_reconstructions.py  visualized_optimization_decoder.py  visualized_optimization_w_decoder.py  (+1 more)
configs/experiment/: defaults.yaml
configs/experiment/autoencoder/: autoencoder_exp.yaml
configs/experiment/classifier/: classifier_exp.yaml
configs/experiment/data/: default_data.yaml
configs/tuning/: optuna.yaml
hydra_conf/autoencoder_conf/: defaults.yaml
hydra_conf/autoencoder_tuning_conf/: defaults.yaml
hydra_conf/classifier_conf/: defaults.yaml
hydra_conf/config_all/: defaults.yaml
hydra_conf/tune_autoencoder/: defaults.yaml
hydra_conf/tune_w_autoencoder/: defaults.yaml
hydra_conf/w_autoencoder_conf/: defaults.yaml
optimization_db/: autoencoder_optimization.db  best_params.sql  w_autoencoder_optimization.db
src/: __init__.py  autoencoder.py  calculating.py  classifier.py  config_options.py  control.py  data_structures.py  data_types.py  datasets.py  decoders.py  download.py  encoders.py  hooks.py  layers.py  learning_schema.py  learning_scheme.py  metrics_and_losses.py  models.py  neighbour_ops.py  parallel.py  tuning.py  utils.py  visualisation.py
src/config/: __init__.py  environment.py  experiment.py  hydra.py  options.py  specs.py  torch.py
src/data/: __init__.py  augmentations.py  databuilder.py  dataset.py  derived_datasets.py  encoded.py  modelnet.py  preprocess.py  processed.py  protocols.py  shapenet.py  split.py  storage.py  structures.py
src/dataset/: __init__.py  augmentations.py  encoded.py  modelnet.py  protocols.py  shapenet.py
src/module/: __init__.py  adversarial.py  autoencoder.py  autoencoders.py  classifier.py  decoders.py  diffusion.py  diffusion_networks.py  encoders.py  flow.py  latent_decoders.py  latent_encoders.py  layers.py  quantize.py  time.py  w_autoencoder.py  w_autoencoders.py  w_conditional.py  w_decoders.py  w_encoders.py
src/train/: __init__.py  evaluations.py  hooks.py  learning_schema.py  loaders.py  metrics_and_losses.py  models.py
src/utils/: __init__.py  control.py  download.py  neighbour_ops.py  parallel.py  tuning.py  visualisation.py  visualization.py
(+175 files in other folders)
