[project]
name = "pointcloudcounterfactual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "numpy>=2.3.5",
    "pykeops>=2.3",
    "scikit-learn>=1.8.0",
    "torch>=2.7.0",
    "torcheval>=0.0.7",
    "torchmetrics>=1.0.3",
]

[project.optional-dependencies]
trackers = [
    "tensorboard>=2.20.0",
    "wandb>=0.23.1",
    "sqlalchemy>=2.0.0",
]
finetuning = [
    "optuna>=4.6.0",
]
visualization = [
        "pyvista>=0.46.4",
        "seaborn>=0.13.2",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "cuda13.0"
url = "https://download.pytorch.org/whl/cu130"
packages = ["torch"]
