[project]
name = "pointcloudcounterfactual"
version = "1.7"
description = 'Code to replicate the article "Towards Point Cloud Counterfactual Explanations" DOI: 10.23919/EUSIPCO63237.2025.11226754'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drytorch==0.1.0rc4",
    "dotenv>=0.9.9",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pykeops>=2.3",
    "requests>=2.28.1",
    "scikit-learn>=1.8.0",
    "torch>=2.7.0",
    "torcheval>=0.0.7",
    "torchmetrics>=1.0.3",
]

[project.optional-dependencies]
trackers = [
    "tensorboard>=2.20.0",
    "wandb>=0.23.1",
    "sqlalchemy>=2.0.0",
    "tqdm"
]
finetuning = [
    "optuna>=4.6.0",
]
visualization = [
        "pyvista>=0.46.4",
        "seaborn>=0.13.2",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "cuda13.0"
url = "https://download.pytorch.org/whl/cu130"
packages = ["torch"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
]
